--- a/springcloud-demo-client/pom.xml
+++ b/springcloud-demo-client/pom.xml
@@ -15,5 +15,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+            <version>2.2.4.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
